[package]
name = "stw3"
version = "0.1.0"
authors = ["Lolirofle <lolipopple@hotmail.com>"]

[dependencies]
alga     = "0.5"
amethyst = { git = "https://github.com/amethyst/amethyst", branch="develop" }
amethyst_renderer = { git = "https://github.com/amethyst/amethyst/", branch="develop" }
cgmath = "0.14"
nalgebra = "0.12"
ncollide = "0.12"
futures = "0.1.16"
